--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,52 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
+# Dependency directories
+node_modules/
+jspm_packages/
 /.pnp
 .pnp.js
 
 # testing
-/coverage
+coverage
+.nyc_output
 
 # production
 /build
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# optional npm cache directory
+.npm
+
+# optional eslint cache
+.eslintcache
+
+# optional REPL history
+.node_repl_history
+
+# output of 'npm pack'
+*.tgz
+
+# yarn Integrity file
+.yarn-integrity
+
+# local env files
+.env.local
+.env.*.local
+
+# next.js build output
+.next
+
+# editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
+
+# misc
+.DS_Store
