--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss}'",
+    "lint": "npx eslint src -f table --max-warnings=0",
+    "lint:fix": "npx eslint src --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -25,6 +28,24 @@
   "devDependencies": {
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
     "prettier": "^1.16.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "npm run lint",
+      "git add"
+    ],
+    "src/**/*.{json,css,scss,md}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
