--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "react-boilerplate",
   "version": "0.1.0",
+  "description": "Starter React project based on create-react-app with some extra configs",
   "private": true,
-  "dependencies": {
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
-  },
+  "author": "João Bagio",
+  "license": "ISC",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -16,36 +14,16 @@
     "lint": "npx eslint src -f table --max-warnings=0",
     "lint:fix": "npx eslint src --fix"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-scripts": "2.1.5"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
   "devDependencies": {
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
-      "prettier --write",
-      "npm run lint",
-      "git add"
-    ],
-    "src/**/*.{json,css,scss,md}": [
-      "prettier --write",
-      "git add"
-    ]
   }
 }
